feat: atendimento comandas avulsas
